# bevy-salo

./: .gitignore  Cargo.toml  README.md  test_buffs.ron
examples/: rpg_buffs.rs
src/: interner.rs  lib.rs  methods.rs  res.rs  saveload.rs  schedules.rs  sealed.rs  serde_impls.rs
tests/: buffs.rs
